# Investment-tracker

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
migrations/versions/: 08c1e5912e37_delete_amount_from_deposits_and_.py  0d476afc938b_delete_account_id_from_deposits_asset_.py  39d3ed70d308_change_refreshtoken_session_id_from_.py  5ed61dd8c6d0_change_default_balance_investable_funds_.py  709a4236295b_delete_currency_from_transactions_tables.py  79729ea66f01_add_currency_to_currency_invests_tables.py  860f6f990daa_init.py  8f89689b592d_delete_purchase_amount_from_assets_table.py  b6cad7dcf9b3_init.py  e64cc6ea2ac1_change_column_is_active_to_is_confirmed_.py  ee8f4d6c0459_add_timezone_true_to_datetime_and_fix_.py  ee92a8352857_add_asset_name_to_assets_table.py
src/config/: config.py  constants.py
src/database/: abstract.py  cache.py  db.py  dependencies.py  models.py
src/repositories/: abstract.py  accounts.py  currency_invests.py  tokens.py  users.py
src/routes/: accounts.py  auth.py  currency_invests.py
src/schemas/: accounts.py  assets.py  currency_invests.py  deposits.py  email.py  tokens.py  transactions.py  users.py
src/services/: abstract.py  auth.py  dependencies.py  email.py  password.py
src/services/templates/: confirmation_email.html  reset_password_email.html
